#1: Add support for authentication with OAuth in JIRA
* Fix from review